force-app/main/default/objects/DSales_Asignacion_de_Productos__c/fields/DSALES_Activo__c.field-meta.xml
<CustomField>
    <fullName>dsalesActivo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>