force-app/main/default/objects/DSales_Asignacion_de_Productos__c/fields/DSALES_Clase__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Clase__c</fullName>
    <formula>DSales_Producto__r.DSALES_Clase__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clase</label>
    <type>Text</type>
</CustomField>