force-app/main/default/objects/DSales_Asignacion_de_Productos__c/fields/DSALES_Familia__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Familia__c</fullName>
    <formula>DSales_Producto__r.DSALES_Familia__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Familia</label>
    <type>Text</type>
</CustomField>