force-app/main/default/objects/DSales_Asignacion_de_Productos__c/fields/DSales_Producto__c.field-meta.xml
<CustomField>
    <fullName>DSales_Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Asignaciones de Productos</relationshipLabel>
    <relationshipName>Asignaciones_de_Productos</relationshipName>
    <type>Lookup</type>
</CustomField>