force-app/main/default/objects/DSales_Asignacion_de_Productos__c/fields/DSales_Servicio_Seguro__c.field-meta.xml
<CustomField>
    <fullName>DSales_Servicio_Seguro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Servicio/Seguro</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Asignaciones de Productos (Servicio/Seguro)</relationshipLabel>
    <relationshipName>Asignaciones_de_Productos1</relationshipName>
    <type>Lookup</type>
</CustomField>