force-app/main/default/objects/DSales_Asignacion_de_Productos__c/fields/DSALES_SKU__c.field-meta.xml
<CustomField>
    <fullName>DSALES_SKU__c</fullName>
    <formula>DSales_Producto__r.StockKeepingUnit</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SKU</label>
    <type>Text</type>
</CustomField>